--- a/cyberunner/Base.lproj/Main.storyboard
+++ b/cyberunner/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
-    <device id="retina6_0" orientation="landscape" appearance="light"/>
+    <device id="retina6_7" orientation="landscape" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,14 +14,14 @@
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="GameViewController" customModule="cyberunner" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
-                        <rect key="frame" x="0.0" y="0.0" width="844" height="390"/>
+                        <rect key="frame" x="0.0" y="0.0" width="926" height="428"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IHI-JN-9aw">
-                                <rect key="frame" x="43.999999999999993" y="286.66666666666669" width="113.33333333333331" height="82.333333333333314"/>
+                                <rect key="frame" x="44.000000000000007" y="315.66666666666669" width="125.66666666666669" height="91.333333333333314"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GpM-6M-qPB" userLabel="Btn Up">
-                                        <rect key="frame" x="0.0" y="0.0" width="51" height="51"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="56.666666666666664" height="56.666666666666664"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="GpM-6M-qPB" secondAttribute="height" multiplier="1:1" id="U0A-AG-W43"/>
                                         </constraints>
@@ -29,14 +30,14 @@
                                             <backgroundConfiguration key="background"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="BtnUpPressed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="Hde-b1-ceb"/>
+                                            <action selector="BtnUpPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="M0J-7H-vKX"/>
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btnUp" translatesAutoresizingMaskIntoConstraints="NO" id="PaE-1k-Vre">
-                                        <rect key="frame" x="0.0" y="0.0" width="51" height="51"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="56.666666666666664" height="56.666666666666664"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BGv-ZS-eZj" userLabel="Btn Down">
-                                        <rect key="frame" x="62.333333333333329" y="31.333333333333314" width="51" height="51"/>
+                                        <rect key="frame" x="69" y="34.666666666666629" width="56.666666666666657" height="56.666666666666657"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="BGv-ZS-eZj" secondAttribute="height" multiplier="1:1" id="boV-Zj-1uf"/>
                                         </constraints>
@@ -45,11 +46,12 @@
                                             <backgroundConfiguration key="background" image="btnDow"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="BtnDownPressed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="Bo5-iU-pkX"/>
+                                            <action selector="BtnDownPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="h7b-Wl-F8r"/>
+                                            <action selector="BtnDownRealesed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="YKV-m0-sam"/>
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btnDown" translatesAutoresizingMaskIntoConstraints="NO" id="gN9-De-X2i" userLabel="Btn Down View">
-                                        <rect key="frame" x="62.333333333333329" y="31.333333333333314" width="51" height="51"/>
+                                        <rect key="frame" x="69" y="34.666666666666629" width="56.666666666666657" height="56.666666666666657"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -71,26 +73,26 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MQM-en-e5J">
-                                <rect key="frame" x="686.66666666666663" y="286.66666666666669" width="113.33333333333337" height="82.333333333333314"/>
+                                <rect key="frame" x="756.33333333333337" y="315.66666666666669" width="125.66666666666663" height="91.333333333333314"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jjb-t0-G1j" userLabel="Btn Kick">
-                                        <rect key="frame" x="1" y="31.333333333333314" width="51" height="51"/>
+                                        <rect key="frame" x="1" y="34.666666666666629" width="56.666666666666664" height="56.666666666666657"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain">
                                             <backgroundConfiguration key="background" image="btnFoot"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="BtnFootPressed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="j9V-Vk-CY0"/>
+                                            <action selector="BtnFootPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="pmO-fl-Q1w"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qHt-uT-FOp" userLabel="Btn Punch">
-                                        <rect key="frame" x="62.333333333333371" y="0.0" width="51" height="51"/>
+                                        <rect key="frame" x="69" y="0.0" width="56.666666666666657" height="56.666666666666664"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain">
                                             <backgroundConfiguration key="background" image="btnPunch"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="BtnPunchPressed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="aa7-F6-1pZ"/>
+                                            <action selector="BtnPunchPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="Vn6-67-vyE"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -101,18 +103,40 @@
                                     <constraint firstItem="qHt-uT-FOp" firstAttribute="top" secondItem="MQM-en-e5J" secondAttribute="top" id="xk3-IN-nav"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OEc-gn-UAy">
+                                <rect key="frame" x="419" y="27.999999999999996" width="463" height="42.666666666666657"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCORE: 000000  | BEST SCORE: 000000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="1" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rhf-pO-sni">
+                                        <rect key="frame" x="0.0" y="0.0" width="463" height="42.666666666666664"/>
+                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                        <color key="textColor" name="appBlue"/>
+                                        <color key="highlightedColor" name="appBlue"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Rhf-pO-sni" firstAttribute="width" secondItem="OEc-gn-UAy" secondAttribute="width" id="5UR-P8-OyJ"/>
+                                    <constraint firstItem="Rhf-pO-sni" firstAttribute="centerX" secondItem="OEc-gn-UAy" secondAttribute="centerX" id="6VZ-Ny-ohh"/>
+                                    <constraint firstItem="Rhf-pO-sni" firstAttribute="height" secondItem="OEc-gn-UAy" secondAttribute="height" id="LnW-LW-6ZW"/>
+                                    <constraint firstItem="Rhf-pO-sni" firstAttribute="centerY" secondItem="OEc-gn-UAy" secondAttribute="centerY" id="NHN-xs-FVI"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="OEc-gn-UAy" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" constant="28" id="3Zm-bB-Lm5"/>
                             <constraint firstAttribute="bottom" secondItem="MQM-en-e5J" secondAttribute="bottom" constant="21" id="7aX-Cf-NBs"/>
                             <constraint firstItem="qHt-uT-FOp" firstAttribute="width" secondItem="GpM-6M-qPB" secondAttribute="width" id="BM5-mw-EyV"/>
                             <constraint firstItem="Jjb-t0-G1j" firstAttribute="height" secondItem="GpM-6M-qPB" secondAttribute="height" id="HQK-7V-hgC"/>
                             <constraint firstItem="Jjb-t0-G1j" firstAttribute="width" secondItem="GpM-6M-qPB" secondAttribute="width" id="Hgr-ah-Qf6"/>
                             <constraint firstItem="IHI-JN-9aw" firstAttribute="width" secondItem="4qk-I5-YsI" secondAttribute="width" multiplier="0.15" id="J4x-Og-efK"/>
                             <constraint firstAttribute="bottom" secondItem="IHI-JN-9aw" secondAttribute="bottom" constant="21" id="MZV-Da-Qqn"/>
+                            <constraint firstItem="OEc-gn-UAy" firstAttribute="width" secondItem="3se-qz-xqx" secondAttribute="width" multiplier="0.5" id="OhX-9h-9pe"/>
+                            <constraint firstAttribute="trailing" secondItem="OEc-gn-UAy" secondAttribute="trailing" constant="44" id="SCQ-KA-Gu0"/>
                             <constraint firstItem="MQM-en-e5J" firstAttribute="height" secondItem="IHI-JN-9aw" secondAttribute="height" id="Viw-IT-y8r"/>
                             <constraint firstItem="IHI-JN-9aw" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" constant="44" id="aAD-5f-sJg"/>
+                            <constraint firstItem="OEc-gn-UAy" firstAttribute="height" secondItem="3se-qz-xqx" secondAttribute="height" multiplier="0.1" id="kif-LC-7QI"/>
                             <constraint firstItem="qHt-uT-FOp" firstAttribute="height" secondItem="GpM-6M-qPB" secondAttribute="height" id="vPJ-SI-VDV"/>
                             <constraint firstItem="MQM-en-e5J" firstAttribute="width" secondItem="IHI-JN-9aw" secondAttribute="width" id="y91-Jc-Uc9"/>
                             <constraint firstAttribute="trailing" secondItem="MQM-en-e5J" secondAttribute="trailing" constant="44" id="z7s-gM-eDk"/>
@@ -125,11 +149,12 @@
                         <outlet property="btnPunch" destination="qHt-uT-FOp" id="9d9-5W-8U0"/>
                         <outlet property="btnUp" destination="GpM-6M-qPB" id="8u0-fm-que"/>
                         <outlet property="btnUpView" destination="PaE-1k-Vre" id="Nb6-Mk-iML"/>
+                        <outlet property="scoreLabel" destination="Rhf-pO-sni" id="iJC-A0-Fnm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.91469194312796" y="89.230769230769226"/>
+            <point key="canvasLocation" x="137.36501079913609" y="88.317757009345783"/>
         </scene>
     </scenes>
     <resources>
@@ -138,6 +163,9 @@
         <image name="btnFoot" width="64" height="64"/>
         <image name="btnPunch" width="64" height="64"/>
         <image name="btnUp" width="64" height="64"/>
+        <namedColor name="appBlue">
+            <color red="0.22400000691413879" green="0.65499997138977051" blue="0.96899998188018799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
