--- a/cyberunner/Base.lproj/Main.storyboard
+++ b/cyberunner/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
     <device id="retina6_7" orientation="landscape" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -25,10 +26,7 @@
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="GpM-6M-qPB" secondAttribute="height" multiplier="1:1" id="U0A-AG-W43"/>
                                         </constraints>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain">
-                                            <backgroundConfiguration key="background"/>
-                                        </buttonConfiguration>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <connections>
                                             <action selector="BtnUpPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="M0J-7H-vKX"/>
                                         </connections>
@@ -41,10 +39,8 @@
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="BGv-ZS-eZj" secondAttribute="height" multiplier="1:1" id="boV-Zj-1uf"/>
                                         </constraints>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain">
-                                            <backgroundConfiguration key="background" image="btnDow"/>
-                                        </buttonConfiguration>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" backgroundImage="btnDow"/>
                                         <connections>
                                             <action selector="BtnDownPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="h7b-Wl-F8r"/>
                                             <action selector="BtnDownRealesed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="YKV-m0-sam"/>
@@ -77,27 +73,37 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jjb-t0-G1j" userLabel="Btn Kick">
                                         <rect key="frame" x="1" y="34.666666666666629" width="56.666666666666664" height="56.666666666666657"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain">
-                                            <backgroundConfiguration key="background" image="btnFoot"/>
-                                        </buttonConfiguration>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" backgroundImage="btnFoot"/>
                                         <connections>
                                             <action selector="BtnFootPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="pmO-fl-Q1w"/>
                                         </connections>
                                     </button>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btnKick" translatesAutoresizingMaskIntoConstraints="NO" id="8Q1-qI-cyS" userLabel="Btn Kick View">
+                                        <rect key="frame" x="1" y="34.666666666666629" width="56.666666666666664" height="56.666666666666657"/>
+                                    </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qHt-uT-FOp" userLabel="Btn Punch">
                                         <rect key="frame" x="69" y="0.0" width="56.666666666666657" height="56.666666666666664"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain">
-                                            <backgroundConfiguration key="background" image="btnPunch"/>
-                                        </buttonConfiguration>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" backgroundImage="btnPunch"/>
                                         <connections>
                                             <action selector="BtnPunchPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="Vn6-67-vyE"/>
                                         </connections>
                                     </button>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btnPunch" translatesAutoresizingMaskIntoConstraints="NO" id="vws-mx-XQ6" userLabel="Btn Punch View">
+                                        <rect key="frame" x="69" y="0.0" width="56.666666666666657" height="56.666666666666664"/>
+                                    </imageView>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="8Q1-qI-cyS" firstAttribute="centerX" secondItem="Jjb-t0-G1j" secondAttribute="centerX" id="AWr-mW-JUp"/>
                                     <constraint firstItem="Jjb-t0-G1j" firstAttribute="leading" secondItem="MQM-en-e5J" secondAttribute="leading" constant="1" id="C9K-oP-nvF"/>
+                                    <constraint firstItem="8Q1-qI-cyS" firstAttribute="centerY" secondItem="Jjb-t0-G1j" secondAttribute="centerY" id="FqO-XP-QA4"/>
+                                    <constraint firstItem="8Q1-qI-cyS" firstAttribute="height" secondItem="Jjb-t0-G1j" secondAttribute="height" id="ISG-or-mPi"/>
+                                    <constraint firstItem="8Q1-qI-cyS" firstAttribute="width" secondItem="Jjb-t0-G1j" secondAttribute="width" id="Iae-wr-IHa"/>
+                                    <constraint firstItem="vws-mx-XQ6" firstAttribute="centerX" secondItem="qHt-uT-FOp" secondAttribute="centerX" id="YAc-rW-Kxb"/>
+                                    <constraint firstItem="vws-mx-XQ6" firstAttribute="height" secondItem="qHt-uT-FOp" secondAttribute="height" id="aUN-pe-BQ3"/>
+                                    <constraint firstItem="vws-mx-XQ6" firstAttribute="centerY" secondItem="qHt-uT-FOp" secondAttribute="centerY" id="fR1-sA-V6K"/>
+                                    <constraint firstItem="vws-mx-XQ6" firstAttribute="width" secondItem="qHt-uT-FOp" secondAttribute="width" id="n8E-Rq-PCq"/>
                                     <constraint firstAttribute="bottom" secondItem="Jjb-t0-G1j" secondAttribute="bottom" id="nMj-zW-Cn9"/>
                                     <constraint firstAttribute="trailing" secondItem="qHt-uT-FOp" secondAttribute="trailing" id="xIH-h4-3vY"/>
                                     <constraint firstItem="qHt-uT-FOp" firstAttribute="top" secondItem="MQM-en-e5J" secondAttribute="top" id="xk3-IN-nav"/>
@@ -109,9 +115,11 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCORE: 000000  | BEST SCORE: 000000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="1" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rhf-pO-sni">
                                         <rect key="frame" x="0.0" y="0.0" width="463" height="42.666666666666664"/>
                                         <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                         <color key="textColor" name="appBlue"/>
                                         <color key="highlightedColor" name="appBlue"/>
+                                        <color key="shadowColor" systemColor="secondaryLabelColor"/>
+                                        <size key="shadowOffset" width="1" height="-1"/>
                                     </label>
                                 </subviews>
                                 <constraints>
@@ -146,7 +154,9 @@
                         <outlet property="btnDown" destination="BGv-ZS-eZj" id="H5e-3z-xTm"/>
                         <outlet property="btnDownView" destination="gN9-De-X2i" id="QV1-lS-ZNw"/>
                         <outlet property="btnKick" destination="Jjb-t0-G1j" id="chL-Gz-z91"/>
+                        <outlet property="btnKickView" destination="8Q1-qI-cyS" id="Erp-oT-6aJ"/>
                         <outlet property="btnPunch" destination="qHt-uT-FOp" id="9d9-5W-8U0"/>
+                        <outlet property="btnPunchView" destination="vws-mx-XQ6" id="oAO-1a-AfB"/>
                         <outlet property="btnUp" destination="GpM-6M-qPB" id="8u0-fm-que"/>
                         <outlet property="btnUpView" destination="PaE-1k-Vre" id="Nb6-Mk-iML"/>
                         <outlet property="scoreLabel" destination="Rhf-pO-sni" id="iJC-A0-Fnm"/>
@@ -160,12 +170,16 @@
     <resources>
         <image name="btnDow" width="128" height="128"/>
         <image name="btnDown" width="64" height="64"/>
-        <image name="btnFoot" width="64" height="64"/>
+        <image name="btnFoot" width="128" height="128"/>
+        <image name="btnKick" width="64" height="64"/>
         <image name="btnPunch" width="64" height="64"/>
         <image name="btnUp" width="64" height="64"/>
         <namedColor name="appBlue">
             <color red="0.22400000691413879" green="0.65499997138977051" blue="0.96899998188018799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
